# http-getter

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: getter.h  options.h  util.h  worker.h
packaging/: PKGBUILD
src/: getter.c  main.c  options.c  util.c  worker.c
